--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -8,3 +8,4 @@ Maintainer: Darren Wilkinson <d.j.wilkinson@ncl.ac.uk>
 Description: This package contains code and data for modelling and simulation of stochastic kinetic biochemical network models. It contains the code and data associated with the second edition of the book Stochastic Modelling for Systems Biology, to be published by Chapman & Hall/CRC Press late 2011.
 License: LGPL-3
 Depends: R (>= 2.9.0)
+Suggests: deSolve (>= 1.9)
