--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,1 +1,2 @@
 export(rfmc,rcfmc,imdeath,rdiff,simpleEuler,gillespie,discretise,gillespied,StepGillespie,simTs,simSample,simTimes,StepEulerSPN,StepCLE,StepPTS,StepFRM,StepEuler,stepLVc)
+useDynLib(smfsb,stepLV)
