--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: smfsb
 Type: Package
-Title: SMfSB 2e: Stochastic modelling for systems biology, 2nd edition
-Version: 0.3
-Date: 2011-04-07
+Title: SMfSB 2e: Stochastic Modelling for Systems Biology, second edition
+Version: 0.4
+Date: 2011-10-11
 Author: Darren Wilkinson
 Maintainer: Darren Wilkinson <darren.wilkinson@ncl.ac.uk>
-Description: This package contains code and data for modelling and simulation of stochastic kinetic biochemical network models. It contains the code and data associated with the second edition of the book Stochastic Modelling for Systems Biology, to be published by Chapman & Hall/CRC Press late 2011.
+Description: This package contains code and data for modelling and simulation of stochastic kinetic biochemical network models. It contains the code and data associated with the second edition of the book Stochastic Modelling for Systems Biology, published by Chapman & Hall/CRC Press, November 2011.
 License: LGPL-3
 Depends: R (>= 2.9.0)
 Suggests: deSolve (>= 1.9)
