--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -1,7 +1,8 @@
 # Makefile
 # Makefile for package checking building, installing, uninstalling, etc.
 
-VERSION=1.2
+VERSION=1.3
+VERSIONSBML=0.1
 
 DEFAULT:
 	make check
@@ -9,6 +10,9 @@ DEFAULT:
 
 check:
 	R CMD check smfsb
+
+check-cran:
+	R CMD check --as-cran smfsb
 
 build:
 	R CMD build smfsb
@@ -24,7 +28,7 @@ remove:
 	R CMD REMOVE smfsb
 
 clean:
-	rm -rf *~ smfsb_*.tar.gz pkg.Rcheck
+	rm -rf *~ smfsb_*.tar.gz smfsb.Rcheck
 
 
 update:
