--- a/pkg/smfsb/DESCRIPTION
+++ b/pkg/smfsb/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: smfsb
 Type: Package
-Title: SMfSB 2e: Stochastic Modelling for Systems Biology, second edition
-Version: 1.2
-Date: 2013-12-15
+Title: SMfSB: Stochastic Modelling for Systems Biology
+Version: 1.3
+Date: 2018-05-15
 Author: Darren Wilkinson
 Maintainer: Darren Wilkinson <darren.wilkinson@ncl.ac.uk>
-Description: This package contains code and data for modelling and simulation of stochastic kinetic biochemical network models. It contains the code and data associated with the second edition of the book Stochastic Modelling for Systems Biology, published by Chapman & Hall/CRC Press, November 2011.
+Description: This package contains code and data for modelling and simulation of stochastic kinetic biochemical network models. It contains the code and data associated with the second and third editions of the book Stochastic Modelling for Systems Biology, published by Chapman & Hall/CRC Press.
 License: LGPL-3
 Depends: R (>= 2.9.0)
 Suggests: deSolve (>= 1.9)
