--- a/pkg/smfsbSBML/DESCRIPTION
+++ b/pkg/smfsbSBML/DESCRIPTION
@@ -7,5 +7,6 @@ Author: Darren Wilkinson
 Maintainer: Darren Wilkinson <darren.wilkinson@ncl.ac.uk>
 Description: This package contains code and data for modelling and simulation of stochastic kinetic biochemical network models. Most code is contained in the CRAN package "smfsb". This package contains the extensions requiring "libSBML".
 License: LGPL-3
-Depends: R (>= 2.9.0), smfsb (>= 1.2), libSBML (>= 5.16.0)
+Depends: R (>= 2.9.0), libSBML (>= 5.16.0)
+Suggests: smfsb (>= 1.2)
 
