added an SIR model, and fixed imports
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/smfsb@77 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/smfsb/NAMESPACE
+++ b/pkg/smfsb/NAMESPACE
@@ -1,2 +1,6 @@
-export(rfmc,rcfmc,imdeath,rdiff,simpleEuler,gillespie,discretise,gillespied,StepGillespie,simTs,simSample,simTimes,StepEulerSPN,StepCLE,StepPTS,StepFRM,StepEuler,stepLVc,StepODE,StepSDE,as.timedData,pfMLLik,normgibbs,metrop,mcmcSummary)
+importFrom("graphics", "hist", "par")
+importFrom("stats", "acf", "dnorm", "rexp", "rgamma", "rnorm", "rpois","runif", "sd", "stepfun", "time", "ts")
+export(rfmc,rcfmc,imdeath,rdiff,simpleEuler,gillespie,discretise,gillespied,StepGillespie,
+simTs,simSample,simTimes,StepEulerSPN,StepCLE,StepPTS,StepFRM,StepEuler,stepLVc,StepODE,StepSDE,
+as.timedData,pfMLLik,normgibbs,metrop,mcmcSummary)
 useDynLib(smfsb,stepLV)
