exact discrete stochastic reaction diffusion - but still need to doc
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/smfsb@78 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/smfsb/NAMESPACE
+++ b/pkg/smfsb/NAMESPACE
@@ -1,6 +1,6 @@
-importFrom("graphics", "hist", "par")
+importFrom("graphics", "hist", "par", "image")
 importFrom("stats", "acf", "dnorm", "rexp", "rgamma", "rnorm", "rpois","runif", "sd", "stepfun", "time", "ts")
 export(rfmc,rcfmc,imdeath,rdiff,simpleEuler,gillespie,discretise,gillespied,StepGillespie,
 simTs,simSample,simTimes,StepEulerSPN,StepCLE,StepPTS,StepFRM,StepEuler,stepLVc,StepODE,StepSDE,
-as.timedData,pfMLLik,normgibbs,metrop,mcmcSummary)
+as.timedData,pfMLLik,normgibbs,metrop,mcmcSummary, StepGillespie1D, StepGillespie2D, simTs1D, simTs2D)
 useDynLib(smfsb,stepLV)
