--- a/pkg/smfsb/DESCRIPTION
+++ b/pkg/smfsb/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: smfsb
 Type: Package
-Title: SMfSB: Stochastic Modelling for Systems Biology
+Title: Stochastic Modelling for Systems Biology
 Version: 1.3
-Date: 2018-05-15
+Date: 2018-06-01
 Author: Darren Wilkinson
 Maintainer: Darren Wilkinson <darren.wilkinson@ncl.ac.uk>
 Description: Code and data for modelling and simulation of stochastic kinetic biochemical network models. It contains the code and data associated with the second and third editions of the book Stochastic Modelling for Systems Biology, published by Chapman & Hall/CRC Press.
