adding in some ABC code
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/smfsb@85 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/smfsb/NAMESPACE
+++ b/pkg/smfsb/NAMESPACE
@@ -1,8 +1,9 @@
 importFrom("graphics", "hist", "par", "image")
 importFrom("abind", "abind")
+importFrom("parallel","mclapply","mcMap")
 importFrom("stats", "acf", "dnorm", "rexp", "rgamma", "rnorm", "rpois","runif", "sd", "stepfun", "time", "ts")
 export(rfmc,rcfmc,imdeath,rdiff,simpleEuler,gillespie,discretise,gillespied,StepGillespie,
 simTs,simSample,simTimes,StepEulerSPN,StepCLE,StepPTS,StepFRM,StepEuler,stepLVc,StepODE,StepSDE,
 as.timedData,pfMLLik, pfMLLik1, normgibbs,metrop,mcmcSummary, StepGillespie1D, StepGillespie2D, 
-simTs1D, simTs2D, StepCLE1D, StepCLE2D)
+simTs1D, simTs2D, StepCLE1D, StepCLE2D, abcRun, abcSmc)
 useDynLib(smfsb,stepLV)
