--- a/pkg/smfsb/NAMESPACE
+++ b/pkg/smfsb/NAMESPACE
@@ -4,6 +4,6 @@ importFrom("parallel","mclapply","mcMap")
 importFrom("stats", "acf", "dnorm", "rexp", "rgamma", "rnorm", "rpois","runif", "sd", "stepfun", "time", "ts")
 export(rfmc,rcfmc,imdeath,rdiff,simpleEuler,gillespie,discretise,gillespied,StepGillespie,
 simTs,simSample,simTimes,StepEulerSPN,StepCLE,StepPTS,StepFRM,StepEuler,stepLVc,StepODE,StepSDE,
-as.timedData,pfMLLik, pfMLLik1, normgibbs,metrop,mcmcSummary, StepGillespie1D, StepGillespie2D, 
-simTs1D, simTs2D, StepCLE1D, StepCLE2D, abcRun, abcSmc)
+as.timedData,pfMLLik, pfMLLik1, normgibbs, metrop, mcmcSummary, StepGillespie1D, StepGillespie2D, 
+simTs1D, simTs2D, StepCLE1D, StepCLE2D, abcRun, abcSmc, metropolisHastings)
 useDynLib(smfsb,stepLV)
