Minor updates ready for sending to CRAN
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/smfsb@100 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -16,6 +16,9 @@ check-cran:
 	R CMD check --as-cran smfsb
 	R CMD check --as-cran smfsbSBML
 
+check-all:
+	R CMD check --as-cran --run-donttest smfsb
+
 build:
 	R CMD build smfsb
 	R CMD build smfsbSBML
