register C routine for CRAN...
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/smfsb@101 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/smfsb/NAMESPACE
+++ b/pkg/smfsb/NAMESPACE
@@ -6,4 +6,4 @@ export(rfmc,rcfmc,imdeath,rdiff,simpleEuler,gillespie,discretise,gillespied,Step
 simTs,simSample,simTimes,StepEulerSPN,StepCLE,StepPTS,StepFRM,StepEuler,stepLVc,StepODE,StepSDE,
 as.timedData,pfMLLik, pfMLLik1, normgibbs, metrop, mcmcSummary, StepGillespie1D, StepGillespie2D, 
 simTs1D, simTs2D, StepCLE1D, StepCLE2D, abcRun, abcSmc, metropolisHastings)
-useDynLib(smfsb,stepLV)
+useDynLib(smfsb, stepLV, .registration = TRUE)
