check for cran on a build
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/smfsb@103 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -13,8 +13,9 @@ check:
 	R CMD check smfsbSBML
 
 check-cran:
-	R CMD check --as-cran smfsb
-	R CMD check --as-cran smfsbSBML
+	make build
+	R CMD check --as-cran smfsb_$(VERSION).tar.gz
+	R CMD check --as-cran smfsbSBML_$(VERSIONSBML).tar.gz
 
 check-all:
 	R CMD check --as-cran --run-donttest smfsb
