--- a/pkg/smfsb/DESCRIPTION
+++ b/pkg/smfsb/DESCRIPTION
@@ -2,9 +2,9 @@ Package: smfsb
 Type: Package
 Title: Stochastic Modelling for Systems Biology
 Version: 1.4
-Date: 2020-03-29
+Date: 2023-12-23
 Author: Darren Wilkinson
-Maintainer: Darren Wilkinson <darren.wilkinson@ncl.ac.uk>
+Maintainer: Darren Wilkinson <darrenjwilkinson@btinternet.com>
 Description: Code and data for modelling and simulation of stochastic kinetic biochemical network models. It contains the code and data associated with the second and third editions of the book Stochastic Modelling for Systems Biology, published by Chapman & Hall/CRC Press.
 License: LGPL-3
 Depends: R (>= 2.9.0), abind (>= 1.3), parallel (>= 3.2.0)
