--- a/pkg/smfsb/DESCRIPTION
+++ b/pkg/smfsb/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: smfsb
 Type: Package
 Title: Stochastic Modelling for Systems Biology
-Version: 1.5
-Date: 2024-01-11
-Author: Darren Wilkinson
+Version: 1.6
+Date: 2025-11-30
+Author: Darren Wilkinson [aut, cre]
 Maintainer: Darren Wilkinson <darrenjwilkinson@btinternet.com>
 Description: Code and data for modelling and simulation of stochastic kinetic biochemical network models. It contains the code and data associated with the second and third editions of the book Stochastic Modelling for Systems Biology, published by Chapman & Hall/CRC Press.
 License: LGPL-3
 Depends: R (>= 2.9.0), abind (>= 1.3), parallel (>= 3.2.0)
 Suggests: deSolve (>= 1.9)
+Authors@R: person(given = "Darren", family = "Wilkinson",
+  role = c("aut", "cre"), email = "darrenjwilkinson@btinternet.com")
